# sm64-fst-brute-forcer-hip

./: CMakeLists.txt  README.md
FST HIP/: FST.cpp  FST.hpp  Platform.hpp  Surface.cpp  Surface.hpp  Trig.cpp  Trig.hpp  main.cpp  temp  utils.cpp  utils.hpp  vmath.cpp  vmath.hpp
platform_tilt_brute_forcer/platform_tilt_brute_forcer/: CMakeLists.txt  FST.cpp  FST.hpp  Platform.hpp  Surface.hpp  main.cpp  main_hau.cpp  main_low_speed.cpp  main_slide_kick.cpp  platform_tilt_brute_forcer.vcxproj  platform_tilt_brute_forcer.vcxproj.filters  utils.cpp  utils.hpp  vmath.cpp
